--- a/client/src/shared/ui/Header/Header.module.scss
+++ b/client/src/shared/ui/Header/Header.module.scss
@@ -9,7 +9,7 @@
     height: 60px;
     margin: 0 60px 0 60px;
 
-    .logo {
+    .link {
       color: var(--light-color-100);
       font-size: 26px;
       font-weight: 600;
