--- a/client/src/shared/styles/index.scss
+++ b/client/src/shared/styles/index.scss
@@ -1,9 +1,10 @@
 @import 'variables/global';
 @import 'reset';
+//@import "variables/common";
 
 .app {
-  font-size: 16px;
-  line-height: 1.5;
-  color: var(--primary-text-color);
-  background-color: var(--dark-color-700);
+    .content {
+        padding: 60px 0;
+    }
 }
+
