--- a/client/src/shared/ui/Input/Input.module.scss
+++ b/client/src/shared/ui/Input/Input.module.scss
@@ -3,18 +3,20 @@
   font-size: 14px;
   font-family: Inter, sans-serif;
   line-height: 24px;
+  margin-top: 15px;
 
-  .styledInput:hover{
-    border: 1px solid var(--light-color-900);
-    color: var(--light-color-900);
-  }
-  .styledInput:focus {
-    border: 1px solid var( --accent-color-500);
-  }
-  .styledInput:active {
-    border: 1px solid var( --light-color-100);
-    color: var(--light-color-100);
-  }
+
+  //.styledInput:hover{
+  //  border: 1px solid var(--light-color-900);
+  //  color: var(--light-color-900);
+  //}
+  //.styledInput:focus {
+  //  border: 1px solid var( --accent-color-500);
+  //}
+  //.styledInput:active {
+  //  border: 1px solid var( --light-color-100);
+  //  color: var(--light-color-100);
+  //}
 
 
   .styledInput {
