--- a/client/src/features/auth/signin/ui/LoginForm.module.scss
+++ b/client/src/features/auth/signin/ui/LoginForm.module.scss
@@ -1,44 +1,48 @@
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-
-  margin-top: 10px;
-}
-
-.wrapper {
-  display: flex;
-  justify-content: center;
-
-  padding: 5rem 0;
-}
-
-.signUpBlock {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.checkboxField {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 6px;
-}
+//.form {
+//  display: flex;
+//  flex-direction: column;
+//  justify-content: space-around;
+//  margin-top: 10px;
+//}
+//
+//.wrapper {
+//  display: flex;
+//  justify-content: center;
+//
+//  padding: 5rem 0;
+//}
+//
+//.signUpBlock {
+//  display: flex;
+//  flex-direction: column;
+//  align-items: center;
+//  justify-content: center;
+//}
+//
+//.checkboxField {
+//  margin-top: 20px;
+//  margin-bottom: 20px;
+//  padding: 6px;
+//}
 
 .passRecovery {
   display: flex;
   justify-content: right;
+  margin-top: 30px;
+
+  .link {
+    color: var(--light-color-900);
+  }
 }
 
-.signUpLink {
-  font-weight: bolder;
-  color: #0066cb;
-}
-
-.error {
-  position: absolute;
-  font-size: 12px;
-  color: indianred;
-  text-align: end;
-}
+//.signUpLink {
+//  font-weight: bolder;
+//  color: #0066cb;
+//}
+//
+//.error {
+//  position: absolute;
+//  font-size: 12px;
+//  color: indianred;
+//  text-align: end;
+//}
