--- a/client/src/features/auth/signIn/ui/signIn.module.scss
+++ b/client/src/features/auth/signIn/ui/signIn.module.scss
@@ -2,9 +2,15 @@
 	font-size: 14px;
   font-family: Inter, sans-serif;
   line-height: 24px;
-  margin: 48px 0 24px 0; 
 	float: right;
 	.forgotPasswordLink{
 		color: var(--light-color-900);
 	}
+	&:not(:last-child),
+	&:not(:first-child) {
+		margin: 48px 0 24px 0; 
+	}
+}
+.signInButton {
+	width: 100%;
 }
