--- a/client/src/features/auth/email_sent/ui/emailSent.module.scss
+++ b/client/src/features/auth/email_sent/ui/emailSent.module.scss
@@ -5,46 +5,56 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-.body{
-	max-width: 378px;
-	border-radius: 2px;
-  border: 1px solid var(--dark-100, #4C4C4C);
-	background: var(--dark-300, #333);
-}
-.title{
-	padding: 12px 24px ;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	border-bottom: 1px solid var(--dark-100, #4C4C4C);
-	font-size: 20px;
-	font-family: Inter;
-	font-style: normal;
-	font-weight: 700;
-	line-height: 36px;
-}
-.content{
-	padding: 30px 24px 36px 24px;
-	display: flex;
-	flex-direction: column;
 
-}
-.text{
-	color: var(--light-100, #FFF);
-	font-size: 16px;
-	font-family: Inter;
-	font-style: normal;
-	font-weight: 300;
-	line-height: 24px;
-	//&:not(:last-child) {
-	//	padding-bottom: 18px;
-	//}
+	.body{
+		max-width: 378px;
+		border-radius: 2px;
+		border: 1px solid var(--dark-100, #4C4C4C);
+		background: var(--dark-300, #333);
+
+		.title{
+			padding: 12px 24px ;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			border-bottom: 1px solid var(--dark-100, #4C4C4C);
+			font-size: 20px;
+			font-family: Inter;
+			font-style: normal;
+			font-weight: 700;
+			line-height: 36px;
+		}
+
+		.content{
+			padding: 30px 24px 36px 24px;
+			display: flex;
+			row-gap: 18px;
+			flex-direction: column;
+
+			.text{
+				color: var(--light-100, #FFF);
+				font-size: 16px;
+				font-family: Inter;
+				font-style: normal;
+				font-weight: 300;
+				line-height: 24px;
+			}
+
+			.link {
+				align-self: flex-end;
+
+				.button{
+					min-width: 96px; 
+					box-sizing: border-box;
+					border-radius: 2px;
+					background: var(--primary-500, #397DF6);
+				}	
+			}
+		}
+	}
 }
 
-.button{
-	align-self: flex-end;
-	width: 96px;
-	border-radius: 2px;
-	background: var(--primary-500, #397DF6);
-}
+
+
+
+
