--- a/client/src/features/auth/signup/ui/accountMerging/ui/accountMerging.module.scss
+++ b/client/src/features/auth/signup/ui/accountMerging/ui/accountMerging.module.scss
@@ -2,12 +2,10 @@
 	width: 100%;
 	height: 100%;
 	.wrapper{
-		padding-top: 35px;
-		padding-left: 30px;
-		padding-right: 30px;
+		padding: 35px 30px 0 30px;
 		text-align: center;
-		@media (max-width:320px) {
-			padding: 10px;
+		@media (max-width:425px) {
+			padding: 17px 15px;
 		}
 		.body{
 			font-family: Inter;
@@ -31,26 +29,44 @@
 
 				&:not(:last-child) {
 					padding-bottom: 30px;
+					@media (max-width:425px) {
+						padding-bottom: 10px;
+					}
 				}	
-
 			}
-			.buttons{
+
+			.changinBox{
 				display: flex;
 				flex-direction: column;
-				align-items: center;
-				gap: 24px;
-				&:not(:last-child) {
-					padding-bottom: 24px;
-					@media (max-width: 320px) {
-						padding-bottom: 3px;
-					}
-				}
-			}
+				gap: 46px;
+				padding-top: 6.6vw;
 
-			.image{
-				.picture {
+
+				.buttons{
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					gap: 24px;
+					&:not(:last-child) {
+						padding-bottom: 24px;
+					}
+					@media (max-width: 425px) {
+						order: 2;
+						width: 100%;
+						.btn {
+							width: 100%;
+						}
+					}
+					
+					.btn {}
+				}
+				
+				.image{
+					.picture {
+					}
 				}
 			}
 		}
 	}
 }
+
