feat (SignUpAdditionPages): 1. Создал переводы 2. Исправил стили 3. Скачал фото для Verification 4. Исправил импорты 5. Сделал скилет CommonBlock и начал использовать его вместе с children

--- a/client/src/features/auth/signup/ui/SignUpAdditionPages/ui/SignUpAdditionPages.module.scss
+++ b/client/src/features/auth/signup/ui/SignUpAdditionPages/ui/SignUpAdditionPages.module.scss
@@ -8,6 +8,8 @@
 			padding: 17px 15px;
 		}
 		.body{
+			max-width: 425px;
+			margin: 0 auto;
 			font-family: Inter;
 			display: flex;
 			flex-direction: column;
@@ -23,8 +25,6 @@
 				}
 			}
 			.content{
-				padding: 0 20px;
-				max-width: 294px;
 				margin: 0 auto;
 
 				&:not(:last-child) {
@@ -55,6 +55,7 @@
 						width: 100%;
 						.btn {
 							width: 100%;
+							padding: 12px 24px
 						}
 					}
 					
