feat: Register from Google and GitHub accounts.                                              refactor: Added ref in Input.

--- a/client/src/shared/styles/main.scss
+++ b/client/src/shared/styles/main.scss
@@ -15,6 +15,6 @@
 
        
 // features
-@import "../../features/auth/signup/ui/signup";
+@import "../../features/auth/signup/ui/signup.module";
 
        
