--- a/client/src/features/auth/signup/ui/SignUpAdditionPages/ui/SignUpAdditionPagesStyles/SignUpAdditionPages.module.scss
+++ b/client/src/features/auth/signup/ui/SignUpAdditionPages/ui/SignUpAdditionPagesStyles/SignUpAdditionPages.module.scss
@@ -1,3 +1,12 @@
+.box {
+	display: flex;
+	gap: 30px;
+	@media (max-width:999px) {
+		flex-direction: column;
+
+	}
+}
+
 .accountMerging{
 	width: 100%;
 	height: 100%;
