--- a/client/src/features/auth/signup/ui/SignUpAdditionPages/ui/SignUpAdditionPagesStyles/SignUpAdditionPages.module.scss
+++ b/client/src/features/auth/signup/ui/SignUpAdditionPages/ui/SignUpAdditionPagesStyles/SignUpAdditionPages.module.scss
@@ -48,7 +48,7 @@
 				display: flex;
 				flex-direction: column;
 				gap: 46px;
-				padding-top: 6.6vw;
+				padding-top: 30px;
 
 
 				.buttons{
