--- a/client/src/features/auth/signup/ui/modalWindow/ui/emailSent.module.scss
+++ b/client/src/features/auth/signup/ui/modalWindow/ui/emailSent.module.scss
@@ -1,12 +1,28 @@
+.pageContainer{
+	position: relative;
+	margin-top: 100px;
+	padding: 0 20px;
+}
+.dislpayNone {
+	display: none;
+}
 .wrapper{
+	position: absolute;
+	left: 0;
+	top: 0;
 	margin: 0 auto;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	padding: 0 10px;
+	background-color: transparent;
+	backdrop-filter: blur(1px);
 
 	.body{
+		align-self: center;
 		max-width: 378px;
 		border-radius: 2px;
 		border: 1px solid var(--dark-100, #4C4C4C);
@@ -23,6 +39,14 @@
 			font-style: normal;
 			font-weight: 700;
 			line-height: 36px;
+			@media (max-width: 425px) {
+				padding: 12px;
+			}
+			.xButton{
+				:hover {
+					cursor: pointer;
+				}
+			}
 		}
 
 		.content{
@@ -30,6 +54,9 @@
 			display: flex;
 			row-gap: 18px;
 			flex-direction: column;
+			@media (max-width: 425px) {
+				padding: 12px;
+			}
 
 			.text{
 				color: var(--light-100, #FFF);
@@ -38,16 +65,27 @@
 				font-style: normal;
 				font-weight: 300;
 				line-height: 24px;
+				@media (max-width: 425px) {
+					text-align: center;
+				}
 			}
 
-			.link {
+			.buttonContainer {
 				align-self: flex-end;
+				@media (max-width: 425px) {
+					display: block;
+					width: 100%;
+				}
 
 				.button{
 					min-width: 96px; 
 					box-sizing: border-box;
 					border-radius: 2px;
 					background: var(--primary-500, #397DF6);
+					@media (max-width: 425px) {
+						min-width: 100%;
+						padding: 14px 24px;
+					}
 				}	
 			}
 		}
