--- a/client/src/shared/styles/variables/common/_form.scss
+++ b/client/src/shared/styles/variables/common/_form.scss
@@ -67,10 +67,19 @@
 
         ;
 
+        &:hover{
+            color: var(--light-color-900);
+        }
+        &[disabled="true"] {
+            color: var(--dark-color-100);
+            border: 1px solid var(--dark-color-100);
+        }
+
+
         &:focus {
-            color: darken(#FFFFFF, 30%);
-            border-radius: 2px;
-            border: 1px solid  var(--light-color-100);
+            //color: var(--light-color-900);
+            //border-radius: 2px;
+            //border: 1px solid var(--accent-color-700);
 
             @include placeholder {
                 color: var(--light-color-100);
@@ -138,6 +147,7 @@
     background: var(--dark-color-500);
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
+    border: 1px solid var(--dark-color-300);
     width: 420px;
     position: relative;
 
