--- a/client/src/shared/styles/index.scss
+++ b/client/src/shared/styles/index.scss
@@ -1,5 +1,5 @@
-@import 'variables/global';
-@import 'reset';
+@import "variables/global";
+@import "reset";
 //@import "variables/common";
 
 .app {
@@ -7,4 +7,3 @@
     padding: 20px 0;
   }
 }
-
