--- a/client/src/features/auth/reset/ui/ResetPassword/reset.scss
+++ b/client/src/features/auth/reset/ui/ResetPassword/reset.scss
@@ -12,6 +12,18 @@
   }
 }
 
+.signup_passwordWrapper__Byu65 {
+  width: 100%;
+}
+
+.Input_inputWrapper__Wdr2V {
+  margin-top: 24px;
+}
+
+.signup_eye__PsHhz {
+  top: 76% !important;
+}
+
 .link-recovery {
   display: inline-block;
   float: right;
@@ -51,4 +63,27 @@
   padding-bottom: 30px;
   padding-top: 30px;
 }
+
+
+  .label {
+    font-size: 14px;
+    font-family: Inter, serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+  .error {
+    color: var(--danger-500, #CC1439);
+    font-size: 14px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+
+    .input {
+      border-color: 1px solid var(--danger-500, #CC1439);
+
+    }
+  }
+
 
