--- a/client/src/features/auth/signup/ui/signup.module.scss
+++ b/client/src/features/auth/signup/ui/signup.module.scss
@@ -1,9 +1,8 @@
 .info {
   margin-bottom: 7px;
-  color: #8D9094;
 }
 
-.link-registration {
+.linkRegistration {
   color: var(--accent-color-500);
   text-decoration: none;
 
@@ -12,7 +11,7 @@
   }
 }
 
-.link-recovery {
+.linkRecovery {
   display: inline-block;
   float: right;
   color: var(--accent-color-500);
@@ -23,7 +22,9 @@
   }
 }
 
-.password-wrapper {
+
+
+.passwordWrapper {
   margin-top: 0;
   position: relative;
 }
@@ -32,13 +33,13 @@
   display: inline-block;
   position: absolute;
   right: 0;
-  top: 65%;
+  top: 73%;
   transform: translateY(-50%) translateX(-50%);
   font-size: 22px;
   cursor: pointer;
 }
 
-.icon-wrapper {
+.iconWrapper {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -46,9 +47,3 @@
   gap: 60px;
   padding: 13px;
 }
-
-.b-title.bt16 {
-  padding-bottom: 30px;
-  padding-top: 30px;
-}
-
