--- a/client/src/shared/styles/variables/common/_buttons.scss
+++ b/client/src/shared/styles/variables/common/_buttons.scss
@@ -1,4 +1,4 @@
-@import '../mixins';
+@import "../mixins";
 
 .styledButton {
     @include animate;
@@ -8,7 +8,7 @@
     cursor: pointer;
     position: relative;
     border: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 
     &:hover,
     &:focus,
@@ -31,7 +31,9 @@
         line-height: 16px;
         font-weight: 500;
         background: var(--light-color-100);
-        box-shadow: 0px 4px 18px rgba(54, 110, 255, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+        box-shadow:
+                0px 4px 18px rgba(54, 110, 255, 0.35),
+                inset 0px 1px 0px rgba(255, 255, 255, 0.3);
         border-radius: 30px;
 
         @include nbtbmb {
@@ -50,7 +52,7 @@
         }
 
         &:after {
-            content: '';
+            content: "";
             min-height: inherit;
             font-size: 0;
         }
@@ -60,7 +62,7 @@
             cursor: not-allowed;
 
             &:hover {
-                background:  var(--danger-color-100);
+                background: var(--danger-color-100);
             }
         }
     }
@@ -72,13 +74,15 @@
     }
 
     &.styled-btn-2 {
-        color:  var(--danger-color-100);
+        color: var(--danger-color-100);
         min-width: 130px;
-        background:  var(--danger-color-100);
-        box-shadow: 0px 2px 10px rgba(109, 109, 109, 0.25), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+        background: var(--danger-color-100);
+        box-shadow:
+                0px 2px 10px rgba(109, 109, 109, 0.25),
+                inset 0px 1px 0px rgba(255, 255, 255, 0.3);
 
         svg {
-            fill:  var(--danger-color-100);
+            fill: var(--danger-color-100);
             margin-right: 5px;
             width: 16px;
             height: 16px;
@@ -90,7 +94,9 @@
         }
 
         &:hover {
-            box-shadow: 0px 2px 10px rgba(109, 109, 109, 0.7), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
+            box-shadow:
+                    0px 2px 10px rgba(109, 109, 109, 0.7),
+                    inset 0px 1px 0px rgba(255, 255, 255, 0.3);
         }
     }
 }
