--- a/client/src/shared/styles/variables/common/_form.scss
+++ b/client/src/shared/styles/variables/common/_form.scss
@@ -1,5 +1,6 @@
 @import "../mixins";
 
+
 .form-style {
   .f-item {
     position: relative;
@@ -37,7 +38,15 @@
         color: var(--danger-color-500);
         margin-top: 2px;
     }
-
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:active,
+  input:-webkit-autofill:focus {
+    background-color: var(--dark-color-500) !important;
+    color: var(--light-color-100) !important;
+    -webkit-box-shadow: 0 0 0 1000px var(--dark-color-500) inset !important;
+    -webkit-text-fill-color: var(--light-color-100) !important;
+  }
     input[type="text"],
     input[type="tel"],
     input[type="number"],
@@ -47,12 +56,11 @@
         width: 100%;
         height: 45px;
         outline: none;
-        font-family: 'Montserrat', sans-serif;
         padding: 0px 10px;
         border-radius: 2px;
         border: 1px solid var(--light-color-900);
         background-color: transparent;
-        color: var(--light-color-900);
+        color: var(--light-color-100);
         font-size: 16px;
         outline: none;
 
