--- a/client/src/shared/ui/Preloader/Preloader.scss
+++ b/client/src/shared/ui/Preloader/Preloader.scss
@@ -1,15 +1,64 @@
+//.preloader-wrapper {
+//    position: absolute;
+//    top: 60px;
+//    width: 100%;
+//
+//}
+//
+//.loader {
+//    width: 100%;
+//    height: 3px;
+//    margin-bottom: 3rem;
+//    background-color: white;
+//    position: relative;
+//
+//    &:after {
+//        content: '';
+//        position: absolute;
+//        display: block;
+//        height: 100%;
+//        background-color: #888;
+//        left: 0%;
+//        right: 100%;
+//        animation: loading 2s ease infinite;
+//    }
+//}
+//
+//.loader.gradient {
+//    background-image: linear-gradient(to right, #ffffff, rgb(102, 188, 249));
+//
+//    &:after {
+//        background-color: white;
+//    }
+//}
+//
+//@keyframes loading {
+//    0% {
+//        left: 0;
+//        right: 100%;
+//    }
+//
+//    50% {
+//        left: 0;
+//        right: 0;
+//    }
+//
+//    100% {
+//        left: 100%;
+//        right: 0;
+//    }
+//}
 .preloader-wrapper {
     position: absolute;
     top: 60px;
     width: 100%;
-
 }
 
 .loader {
     width: 100%;
     height: 3px;
     margin-bottom: 3rem;
-    background-color: white;
+    background-color: var(--dark-color-100); /* Заменяем на вашу переменную */
     position: relative;
 
     &:after {
@@ -17,7 +66,7 @@
         position: absolute;
         display: block;
         height: 100%;
-        background-color: #888;
+        background-color: var(--dark-color-300); /* Заменяем на вашу переменную */
         left: 0%;
         right: 100%;
         animation: loading 2s ease infinite;
@@ -25,10 +74,10 @@
 }
 
 .loader.gradient {
-    background-image: linear-gradient(to right, #ffffff, rgb(102, 188, 249));
+    background-image: linear-gradient(to right, var(--dark-color-500), var(--dark-color-700)); /* Заменяем на ваши переменные */
 
     &:after {
-        background-color: white;
+        background-color: var(--dark-color-100); /* Заменяем на вашу переменную */
     }
 }
 
