fix: translation and validation for form fix: structure of components in the page

--- a/client/src/features/auth/signIn/ui/signIn.module.scss
+++ b/client/src/features/auth/signIn/ui/signIn.module.scss
@@ -20,3 +20,11 @@
 .signInButton {
   width: 100%;
 }
+
+.error {
+  position: absolute;
+  font-size: 14px;
+  color: var(--danger-color-500);
+  font-weight: 400;
+  line-height: 24px;
+}
