--- a/client/src/pages/EmailConfirmation/ui/emailConfirmation.module.scss
+++ b/client/src/pages/EmailConfirmation/ui/emailConfirmation.module.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
   .wrapper {
-    padding: 35px 30px 0 30px;
+    padding: 70px 30px 20px 30px;
     text-align: center;
     @media (max-width: 425px) {
       padding: 17px 15px;
