--- a/client/src/features/auth/signout/ui/SignOutButton/SignOutButton.module.scss
+++ b/client/src/features/auth/signout/ui/SignOutButton/SignOutButton.module.scss
@@ -1,8 +1,11 @@
 .btn {
-  color: var(--primary-text-color);
   display: flex;
   align-items: center;
   gap: 12px;
+
+  .text {
+    color: var(--primary-text-color);
+  }
 
   .icon {
     g {
