--- a/client/src/shared/styles/variables/common.scss
+++ b/client/src/shared/styles/variables/common.scss
@@ -29,6 +29,7 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.5;
   color: var(--light-color-100);
   background: var(--dark-color-700);
