--- a/client/src/features/avatarUpload/ui/avatarUpload.module.scss
+++ b/client/src/features/avatarUpload/ui/avatarUpload.module.scss
@@ -104,7 +104,7 @@ img#round{
   color: black;
 }
 
-button {
+.crop-button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -115,14 +115,15 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+.crop-button:hover {
   border-color: #646cff;
 }
-button:focus, button:focus-visible {
+.crop-button:focus, .crop-button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
 #crop-button{
+
   margin-left: auto;
   margin-right: auto;
 }
