story: Sidebar - fix style - 'fix' types

--- a/client/src/widgets/Sidebar/ui/sideBar.module.scss
+++ b/client/src/widgets/Sidebar/ui/sideBar.module.scss
@@ -5,10 +5,8 @@
   .body {
     display: flex;
     flex-direction: column;
-    align-items: center;
     height: 90%;
-    padding-top: 72px;
-    padding-bottom: 36px;
+    padding: 72px 0 36px 60px;
     min-height: 90%;
   }
 
