--- a/client/src/shared/styles/variables/common/_form.scss
+++ b/client/src/shared/styles/variables/common/_form.scss
@@ -1,7 +1,25 @@
 @import "../mixins";
 
+.field.input-field {
+  width: 100%;
+}
+.signup_passwordWrapper__Byu65{
+  width: 100%;
+}
+
+.signup_eye__PsHhz {
+  top:74% !important;
+}
+
+.Input_inputWrapper__Wdr2V {
+  margin-top: 25px !important;
+}
 
 .form-style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   .f-item {
     position: relative;
     display: flex;
@@ -303,6 +321,7 @@
 
         &:not(:first-child) {
             margin-top: 36px;
+          margin-bottom: 10px;
 
             @include nb {
                 margin-top: 50px;
