refactor , storyes, styles feat: - create SidebarFooterItem, Sidebar, SidebarItem - icons imports - sidebarItemsData: rename consts - Header : only add SidebarDropdown - stories : DropdownMenu, SidebarDropdown, Header, Sidebar, SidebarItem - style header,  Sidebar

--- a/client/src/widgets/Header/ui/Header.module.scss
+++ b/client/src/widgets/Header/ui/Header.module.scss
@@ -23,6 +23,12 @@
         display: inline-flex;
         align-items: center;
       }
+      .dropdown {
+        display: none;
+        @media (max-width: 768px) {
+          display: inline-block;
+        }
+      }
     }
   }
 }
