--- a/client/src/widgets/Sidebar/ui/SidebarWeb/sideBar.module.scss
+++ b/client/src/widgets/Sidebar/ui/SidebarWeb/sideBar.module.scss
@@ -1,98 +1,139 @@
 .sidebar {
   height: 100%;
-  max-width: 220px;
+  max-width: 250px;
   border-right: 1px solid var(--dark-300, #333);
-  .body {
-    display: flex;
-    flex-direction: column;
-    height: 90%;
-    padding: 72px 0 36px 50px;
-    min-height: 90%;
-  }
-
-  .mainBlock {
-    margin-bottom: 60px;
-  }
-
-  .midleBlock {
-    flex: 0 1 auto;
-  }
-
-  .footer {
-    margin-top: auto;
-  }
-}
-
-.mainBlock,
-.midleBlock,
-.footer {
-  display: flex;
-  flex-direction: column;
-  row-gap: 14px;
-}
-
-.item {
-  list-style-type: none;
-  .link {
-    padding: 5px 10px;
-    box-sizing: border-box;
-    display: flex;
-    column-gap: 12px;
-    align-items: center;
-    color: white;
-    transition:
-      background-color 0.2s linear,
-      color 0.2s linear;
-    &:active {
-      color: var(--accent-color-500);
-    }
-    &:focus-visible {
-      outline: none;
-      border-radius: 2px;
-      border: 2px solid var(--accent-color-700);
-    }
-    &[disabled='true'] {
-      color: var(--dark-color-100);
-    }
-
-    .image {
+  .container {
+    height: 100%;
+    padding-left: 50px;
+    .body {
       display: flex;
-      align-items: center;
-      svg > path {
-        fill: currentColor;
-        transition: fill 0.2s linear;
+      flex-direction: column;
+      //height: 100%;
+      padding: 72px 0 36px 0;
+      min-height: 90%;
+      .mainBlock {
+        margin-bottom: 60px;
+      }
+      .midleBlock {
+        flex: 0 1 auto;
+      }
+      //must be renemed
+      .logout {
+        margin-top: auto;
+      }
+      .mainBlock,
+      .midleBlock,
+      .logout {
+        display: flex;
+        flex-direction: column;
+        row-gap: 14px;
+      }
+      .item {
+        list-style-type: none;
+        .link {
+          padding: 5px 10px;
+          box-sizing: border-box;
+          display: inline-flex;
+          column-gap: 12px;
+          align-items: center;
+          color: white;
+          transition:
+            background-color 0.2s linear,
+            color 0.2s linear;
+          &:active {
+            color: var(--accent-color-500);
+          }
+          &:focus-visible {
+            outline: none;
+            border-radius: 2px;
+            border: 2px solid var(--accent-color-700);
+          }
+          &[disabled='true'] {
+            color: var(--dark-color-100);
+          }
+          &:hover,
+          .active:hover {
+            color: var(--accent-color-100);
+            .text {
+              color: var(--accent-color-100);
+            }
+            .image svg {
+              path {
+                fill: var(--accent-color-100);
+              }
+            }
+          }
+        }
+        .active {
+          color: var(--accent-color-500);
+          .text {
+            color: var(--accent-color-500);
+          }
+          .image svg {
+            path {
+              fill: var(--accent-color-500);
+            }
+          }
+        }
+        .image {
+          display: flex;
+          align-items: center;
+          svg > path {
+            fill: currentColor;
+            transition: fill 0.2s linear;
+          }
+        }
+        .text {
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 24px;
+          transition: color 0.2s linear;
+        }
       }
     }
-    .text {
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 24px;
-      transition: color 0.2s linear;
-    }
   }
-
-  &:hover,
+}
+.mobileFooter {
+  list-style-type: none;
+  display: none;
+  width: 100%;
+  border-top: 1px solid var(--dark-color-300);
+  background: var(--dark-color-700);
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 18px 48px;
+  .item:hover,
   .active:hover {
     color: var(--accent-color-100);
-    .text {
-      color: var(--accent-color-100);
-    }
     .image svg {
       path {
         fill: var(--accent-color-100);
+        transition: fill 0.2s linear;
       }
     }
   }
-  .active {
-    color: var(--accent-color-500);
-    .text {
-      color: var(--accent-color-500);
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
+  .container {
+    padding: 0 15px;
+  }
+
+  .mobileFooter {
+    display: flex;
+  }
+  .item {
+    .link {
+      padding: 5px 0;
     }
-    .image svg {
-      path {
-        fill: var(--accent-color-500);
-      }
-    }
+  }
+}
+@media (max-width: 425px) {
+  .mobileFooter {
+    padding: 18px;
   }
 }
