--- a/client/src/widgets/Sidebar/ui/SidebarWeb/sideBar.module.scss
+++ b/client/src/widgets/Sidebar/ui/SidebarWeb/sideBar.module.scss
@@ -28,69 +28,69 @@
         flex-direction: column;
         row-gap: 14px;
       }
-      .item {
-        list-style-type: none;
-        .link {
-          padding: 5px 10px;
-          box-sizing: border-box;
-          display: inline-flex;
-          column-gap: 12px;
-          align-items: center;
-          color: white;
-          transition:
-            background-color 0.2s linear,
-            color 0.2s linear;
-          &:active {
-            color: var(--accent-color-500);
-          }
-          &:focus-visible {
-            outline: none;
-            border-radius: 2px;
-            border: 2px solid var(--accent-color-700);
-          }
-          &[disabled='true'] {
-            color: var(--dark-color-100);
-          }
-          &:hover,
-          .active:hover {
-            color: var(--accent-color-100);
-            .text {
-              color: var(--accent-color-100);
-            }
-            .image svg {
-              path {
-                fill: var(--accent-color-100);
-              }
-            }
-          }
-        }
-        .active {
-          color: var(--accent-color-500);
-          .text {
-            color: var(--accent-color-500);
-          }
-          .image svg {
-            path {
-              fill: var(--accent-color-500);
-            }
-          }
-        }
-        .image {
-          display: flex;
-          align-items: center;
-          svg > path {
-            fill: currentColor;
-            transition: fill 0.2s linear;
-          }
-        }
-        .text {
-          font-size: 14px;
-          font-style: normal;
-          font-weight: 500;
-          line-height: 24px;
-          transition: color 0.2s linear;
-        }
-      }
+      //.item {
+      //  list-style-type: none;
+      //  .link {
+      //    padding: 5px 10px;
+      //    box-sizing: border-box;
+      //    display: inline-flex;
+      //    column-gap: 12px;
+      //    align-items: center;
+      //    color: white;
+      //    transition:
+      //      background-color 0.2s linear,
+      //      color 0.2s linear;
+      //    &:active {
+      //      color: var(--accent-color-500);
+      //    }
+      //    &:focus-visible {
+      //      outline: none;
+      //      border-radius: 2px;
+      //      border: 2px solid var(--accent-color-700);
+      //    }
+      //    &[disabled='true'] {
+      //      color: var(--dark-color-100);
+      //    }
+      //    &:hover,
+      //    .active:hover {
+      //      color: var(--accent-color-100);
+      //      .text {
+      //        color: var(--accent-color-100);
+      //      }
+      //      .image svg {
+      //        path {
+      //          fill: var(--accent-color-100);
+      //        }
+      //      }
+      //    }
+      //  }
+      //  .active {
+      //    color: var(--accent-color-500);
+      //    .text {
+      //      color: var(--accent-color-500);
+      //    }
+      //    .image svg {
+      //      path {
+      //        fill: var(--accent-color-500);
+      //      }
+      //    }
+      //  }
+      //  .image {
+      //    display: flex;
+      //    align-items: center;
+      //    svg > path {
+      //      fill: currentColor;
+      //      transition: fill 0.2s linear;
+      //    }
+      //  }
+      //  .text {
+      //    font-size: 14px;
+      //    font-style: normal;
+      //    font-weight: 500;
+      //    line-height: 24px;
+      //    transition: color 0.2s linear;
+      //  }
+      //}
     }
   }
 }
