root-layout main > Sidebar + section + children style: - index.scss - sideBar - sideBarItem

--- a/client/src/widgets/Sidebar/ui/SidebarWeb/sideBar.module.scss
+++ b/client/src/widgets/Sidebar/ui/SidebarWeb/sideBar.module.scss
@@ -1,4 +1,5 @@
 .sidebar {
+  flex: 0 0 auto;
   height: 100%;
   max-width: 250px;
   border-right: 1px solid var(--dark-300, #333);
@@ -8,89 +9,25 @@
     .body {
       display: flex;
       flex-direction: column;
-      //height: 100%;
-      padding: 72px 0 36px 0;
-      min-height: 90%;
+      padding: 72px 20px 36px 0;
+      min-height: 95%;
       .mainBlock {
         margin-bottom: 60px;
       }
       .midleBlock {
         flex: 0 1 auto;
       }
-      //must be renemed
       .logout {
         margin-top: auto;
       }
       .mainBlock,
       .midleBlock,
       .logout {
+        width: 100%;
         display: flex;
         flex-direction: column;
         row-gap: 14px;
       }
-      //.item {
-      //  list-style-type: none;
-      //  .link {
-      //    padding: 5px 10px;
-      //    box-sizing: border-box;
-      //    display: inline-flex;
-      //    column-gap: 12px;
-      //    align-items: center;
-      //    color: white;
-      //    transition:
-      //      background-color 0.2s linear,
-      //      color 0.2s linear;
-      //    &:active {
-      //      color: var(--accent-color-500);
-      //    }
-      //    &:focus-visible {
-      //      outline: none;
-      //      border-radius: 2px;
-      //      border: 2px solid var(--accent-color-700);
-      //    }
-      //    &[disabled='true'] {
-      //      color: var(--dark-color-100);
-      //    }
-      //    &:hover,
-      //    .active:hover {
-      //      color: var(--accent-color-100);
-      //      .text {
-      //        color: var(--accent-color-100);
-      //      }
-      //      .image svg {
-      //        path {
-      //          fill: var(--accent-color-100);
-      //        }
-      //      }
-      //    }
-      //  }
-      //  .active {
-      //    color: var(--accent-color-500);
-      //    .text {
-      //      color: var(--accent-color-500);
-      //    }
-      //    .image svg {
-      //      path {
-      //        fill: var(--accent-color-500);
-      //      }
-      //    }
-      //  }
-      //  .image {
-      //    display: flex;
-      //    align-items: center;
-      //    svg > path {
-      //      fill: currentColor;
-      //      transition: fill 0.2s linear;
-      //    }
-      //  }
-      //  .text {
-      //    font-size: 14px;
-      //    font-style: normal;
-      //    font-weight: 500;
-      //    line-height: 24px;
-      //    transition: color 0.2s linear;
-      //  }
-      //}
     }
   }
 }
