--- a/client/src/shared/styles/index.scss
+++ b/client/src/shared/styles/index.scss
@@ -1,9 +1,27 @@
-@import "variables/global";
-@import "reset";
+@import 'variables/global';
+@import 'reset';
 //@import "variables/common";
 
 .app {
   .content {
     padding: 20px 0;
+  }
+}
+.main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.section {
+  width: 100%;
+  min-height: 100%;
+  flex: 0 1 auto;
+}
+@media (max-width: 768px) {
+  .main {
+    flex-direction: column;
+  }
+  .main :nth-child(2) {
+    order: 3;
   }
 }
