--- a/client/src/shared/styles/index.scss
+++ b/client/src/shared/styles/index.scss
@@ -1,5 +1,6 @@
 @import "variables/global";
 @import "reset";
+@import "../../shared/ui/DatePicker/datepicker-styles";
 //@import "variables/common";
 
 .app {
