--- a/client/src/shared/styles/variables/common.scss
+++ b/client/src/shared/styles/variables/common.scss
@@ -1,4 +1,5 @@
 @import "global.scss";
+@import "../../../shared/ui/DatePicker/datepicker-styles";
 @import "mixins";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
