refactor reqovery pages

--- a/client/src/features/auth/forgotPassword/ui/forgotPassword.scss
+++ b/client/src/features/auth/forgotPassword/ui/forgotPassword.scss
@@ -10,7 +10,7 @@
 }
 
 .auth-form .info:not(:first-child) {
-  margin-top: 35px !important;
+  //margin-top: 35px !important;
 }
 
 .link-registration {
@@ -67,7 +67,7 @@
   padding: 13px;
 }
 
-.b-title.bt16 {
+.b-title.bt16.link-forgot {
   padding-bottom: 30px;
   padding-top: 30px;
 }
