--- a/client/src/features/auth/resetPassword/ui/resetPassword.scss
+++ b/client/src/features/auth/resetPassword/ui/resetPassword.scss
@@ -17,11 +17,14 @@
 }
 
 .auth-form .info:not(:first-child) {
-  margin-top: 35px !important;
+  //margin-top: 35px !important;
 }
 
+.reset-btn {
+  margin-bottom: 15px;
+}
 
-.link-recovery {
+.link-forgot {
   display: inline-block;
   float: right;
   color: var(--accent-color-500);
@@ -57,8 +60,8 @@
 }
 
 .b-title.bt16 {
-  padding-bottom: 30px;
-  padding-top: 30px;
+  //padding-bottom: 30px;
+  //padding-top: 30px;
 }
 
 
